Team2_k8s_App/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carapp-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: carapp
  template:
    metadata:
      labels:
        app: carapp
    spec:
      containers:
        - name: carapp
          image: pretinkya/carapp:latest
          ports:
            - containerPort: 5000
