Team2_k8s_App/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: carapp-service
spec:
  selector:
    app: carapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30666
  type: NodePort
