Team2_k8s_App/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: carappteam4.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: carapp-service 
            port:
              number: 80

# kubectl port-forward --address 0.0.0.0 svc/carapp-service 8090:80
